# openarm-yolo-pose-teleop

./: README.md
install/: local_setup.sh  setup.sh
install/openarm/share/openarm/: local_setup.sh  package.sh
install/openarm_bimanual_moveit_config/share/openarm_bimanual_moveit_config/: package.sh
install/openarm_bringup/share/openarm_bringup/: local_setup.sh  package.sh
install/openarm_can/include/openarm/damiao_motor/: dm_motor_constants.hpp  dm_motor_control.hpp  dm_motor_device.hpp  dm_motor_device_collection.hpp
install/openarm_can/lib/cmake/OpenArmCAN/: OpenArmCANConfigVersion.cmake  OpenArmCANTargets.cmake  (+1 more)
install/openarm_can/lib/pkgconfig/: openarm-can.pc
install/openarm_can/share/openarm_can/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/openarm_description/share/openarm_description/: package.sh
install/openarm_hardware/include/openarm_hardware/: v10_simple_hardware.hpp
install/openarm_hardware/share/openarm_hardware/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/openarm_moveit_config/share/openarm_moveit_config/: local_setup.dsv  package.bash  package.dsv  package.ps1  package.sh  package.zsh
log/: latest_build
pose_control/: human_to_openarm_bimanual.py  human_to_openarm_bimanual_rs.py
src/openarm_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
src/openarm_moveit_config/config/: kinematics.yaml  move_group.yaml  moveit.rviz  moveit_controllers.yaml  openarm.srdf  pilz_cartesian_limits.yaml
src/openarm_moveit_config/launch/: demo.launch.py  moveit_rviz.launch.py
(+14 files in other folders)
